--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.9",
+    "@mui/lab": "^5.0.0-alpha.121",
     "@mui/material": "^5.11.10",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
